[package]
name = "redis-caching"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.9"
redis = "*"
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
bson = "*"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["sync"]
